remove notice button in message_room (issue #314)

--- a/templates/message/message_room.html
+++ b/templates/message/message_room.html
@@ -26,7 +26,7 @@
                 <div>블로그 작성시 각 포스팅 마지막에 리뷰 배너를 삽입해주세요.</div>
                 <div>
                     <button id="popup_btn">[리뷰 배너 삽입 방법 보기]</button>
-                    <button style="margin-left:20px;">[관련 공지 보러 가기]</button>
+{#                    <button style="margin-left:20px;">[관련 공지 보러 가기]</button>#}
                 </div>
             </div>
         </div>
