--- a/static/css/dashboard/account_detail.css
+++ b/static/css/dashboard/account_detail.css
@@ -1,19 +1,20 @@
 .detail_wrapper{
     width:90%;
     height:auto;
-    margin-left:5%;
-    margin-top:3%;
+    position: relative;
+    left:5%;
+    margin-top:1%;
     padding-top:10%;
-    background: -webkit-linear-gradient(#e8e8e8 236px, white 0);
-    background: -moz-linear-gradient(#e8e8e8 236px, white 0);
-    background: -ms-linear-gradient(#e8e8e8 236px, white 0);
-    background: linear-gradient(#e8e8e8 236px, white 0);
+    background: -webkit-linear-gradient(#e8e8e8 150px, white 0);
+    background: -moz-linear-gradient(#e8e8e8 150px, white 0);
+    background: -ms-linear-gradient(#e8e8e8 150px, white 0);
+    background: linear-gradient(#e8e8e8 150px, white 0);
 }
 
 .detail_content_wrapper{
     position:relative;
-    left:20%;
-    width:60%;
+    left:2%;
+    width:96%;
     height:auto;
 }
 
@@ -239,7 +240,7 @@
     width:90%;
     height:76%;
     position: relative;
-    left:5%;
+    left:6%;
 }
 
 
@@ -451,7 +452,7 @@
 	width:100%;
 	height:100%;
     margin-top:0px;
-    margin-left:8%;
+    margin-left:10%;
 }
 /* arrow for 1 */
 /*
@@ -606,7 +607,7 @@
     left:-3%;
   padding-top:3%;
   */
-    width:150px;
+    width:130px;
     height:25px;
     left:-6%;
   border:1px solid grey;
