profit_manage history tab

--- a/static/css/dashboard/seller/profit.css
+++ b/static/css/dashboard/seller/profit.css
@@ -249,19 +249,19 @@
     margin-left: 43px;
 }
 
-.withdrawal_item .order_number {
+.profit_item .order_number {
     width: 20%;
     text-align: center;
     overflow:hidden;
 }
 
-.withdrawal_item .order_date {
+.profit_item .order_date {
     width: 10%;
     text-align: center;
     overflow:hidden;
 }
 
-.withdrawal_item .order_service_title {
+.profit_item .order_service_title {
     width: 31%;
     text-align: center;
     overflow:hidden;
@@ -269,7 +269,7 @@
     white-space:nowrap;
 }
 
-.withdrawal_item .order_buyer_id {
+.profit_item .order_buyer_id {
     width: 14%;
     text-align: center;
     overflow:hidden;
@@ -277,7 +277,7 @@
     white-space:nowrap;
 }
 
-.withdrawal_item .order_price {
+.profit_item .order_price {
     width: 19%;
     text-align: center;
     overflow:hidden;
@@ -285,7 +285,7 @@
 
 /* withdraw history tab */
 
-.withdraw-history-ul {
+.profit-history-ul {
     list-style: none;
     display: inline-block;
     font-size: 14px;
@@ -296,7 +296,7 @@
     margin-right: 30px;
 }
 
-.withdraw-history-ul li{
+.profit-history-ul li{
     display: inline;
 }
 
@@ -312,16 +312,16 @@
     margin-left: 123px;
 }
 
-.withdraw-history-ul-wrapper {
+.profit-history-ul-wrapper {
     margin-bottom: 10px;
 }
 
-.withdrawal_items_wrapper {
+.profit_items_wrapper {
     text-align: center;
     overflow: auto;
     max-height: 172px;
 }
-.withdrawal_items_wrapper .withdrawal_item {
+.profit_items_wrapper .profit_item {
     border: 1px solid #DADADA;
     width: 500px;
     text-align: center;
@@ -330,22 +330,22 @@
     padding-top: 5px;
 }
 
-.withdrawal_item span {
+.profit_item span {
     display: inline-block;
 
 }
 
-.withdrawal_item .withdraw_date {
+.profit_item .withdraw_date {
     width: 32%;
     text-align: center;
 }
 
-.withdrawal_item .withdraw_money {
+.profit_item .withdraw_money {
     width: 32%;
     text-align: center;
 }
 
-.withdrawal_item .withdraw_status {
+.profit_item .withdraw_status {
     width: 33%;
     text-align: center;
 }
