add gauge-data for home, search template

--- a/templates/search.html
+++ b/templates/search.html
@@ -270,7 +270,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
@@ -383,7 +383,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
