--- a/templates/home.html
+++ b/templates/home.html
@@ -400,7 +400,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
@@ -513,7 +513,7 @@
                                     </div>
                                     <div class="circle-wrapper">
                                         <img class="circle-arrow" src="{% static 'img/arrow_gauge.png' %}" >
-                                        <ul class="circle">
+                                        <ul class="circle" gauge-data="{{ product.socialup_gauge }}">
                                             <li class="circle-list">
                                                 <div class="circle-text">1</div>
                                             </li>
