--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
     </div>
     <div class="contact-drop-down" style="display:none;">
         <a class="contact_button">1:1 문의</a>
-        <a href="{% url 'dashboard' %}">신고하기</a>
+        <a href="{% url 'report' %}">신고하기</a>
     </div>
 </div>
 
