--- a/templates/home.html
+++ b/templates/home.html
@@ -307,6 +307,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
@@ -418,6 +419,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">
                                                         {{ product.unit_price }}
                                                     </span>
@@ -531,6 +533,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">
                                                         {{ product.unit_price }}
                                                     </span>
