add text to graph 'per 1 follower' in search page (issue #320)

--- a/templates/search.html
+++ b/templates/search.html
@@ -177,6 +177,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">{{ product.unit_price }}</span>
                                                     <span style="font-size:15px;">원</span>
                                                 </div>
@@ -288,6 +289,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">
                                                         {{ product.unit_price }}
                                                     </span>
@@ -401,6 +403,7 @@
                                             </li>
                                             <div class="circle-mask2">
                                                 <div class="circle-mask2-text">
+                                                    <span style="font-size:11px; color:#888;">팔로워 1명당</span><br>
                                                     <span style="font-size:23px;">
                                                         {{ product.unit_price }}
                                                     </span>
